--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/TomHarte"]
-	path = src/Tests/K6502/TomHarte
+	path = K6502/test/TomHarte
 	url = https://github.com/SingleStepTests/65x02
