Started the KBasic project
The idea is to figure out what functions I need.
Create a simple I/O using SDL or just a simple terminal.
Then create a simple BIOS in assembly with the required functions.
And then simply build it all together and run it.

Sounds easy enough. Maybe a week of work?

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tests/TomHarte"]
 	path = K6502/test/TomHarte
 	url = https://github.com/SingleStepTests/65x02
+[submodule "KBasic/msbasic"]
+	path = KBasic/Basic/msbasic
+	url = https://github.com/mist64/msbasic
