Fucking terminal working
This could have been done in half an hour if I didn't want to implement
it using fucking shift registers. FUCK shift registers.

--- a/AppleI/AppleI.cabal
+++ b/AppleI/AppleI.cabal
@@ -23,9 +23,9 @@ executable AppleI
     other-modules:      AppleI.Bus
                     ,   AppleI.Keyboard
                     ,   AppleI.Terminal
+                    ,   AppleI.Terminal.Carousel
                     ,   AppleI.Memory
                     ,   AppleI.Main
-                    ,   AppleI.Carousel
                     ,   Frontend.Internal
                     ,   Frontend.Main
     -- other-extensions:
