--- a/K6502/K6502.cabal
+++ b/K6502/K6502.cabal
@@ -19,6 +19,8 @@ common warnings
 library
     import:             warnings
     exposed-modules:    K6502
+                    ,   K6502.Disassembler
+
     other-modules:      Utils
                     ,   K6502.API
                     ,   K6502.Execution
@@ -28,6 +30,7 @@ library
     -- other-extensions:
     build-depends:      base ^>=4.17.2.1
                     ,   mtl >= 2.2.2
+                    ,   containers >= 0.6.7
     hs-source-dirs:   src
     default-language: Haskell2010
 
