--- a/AppleII/AppleII.cabal
+++ b/AppleII/AppleII.cabal
@@ -25,7 +25,7 @@ executable AppleI
                     ,   AppleII.Memory
                     ,   Frontend
     -- other-extensions:
-    build-depends:      base ^>=4.17.2.1
+    build-depends:      base >=4.17.2.1
                     ,   K6502
                     ,   vector >= 0.13.1.0
                     ,   mtl >= 2.2.2
