--- a/K6502/K6502.cabal
+++ b/K6502/K6502.cabal
@@ -28,7 +28,7 @@ library
                     ,   K6502.Internal
                     ,   K6502.Types
     -- other-extensions:
-    build-depends:      base ^>=4.17.2.1
+    build-depends:      base >=4.17.2.1
                     ,   mtl >= 2.2.2
                     ,   containers >= 0.6.7
     hs-source-dirs:   src
