Palette is no longer hard-coded

--- a/AppleII/AppleII.cabal
+++ b/AppleII/AppleII.cabal
@@ -14,6 +14,7 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 data-files:         Assets/font.bin
+                ,   Assets/palette.bin
 
 common warnings
     ghc-options: -Wall
