--- a/AppleII/AppleII.cabal
+++ b/AppleII/AppleII.cabal
@@ -29,6 +29,7 @@ executable AppleII
                   ,   AppleII.Keyboard
                   ,   AppleII.Memory
                   ,   Frontend
+                  ,   Frontend.KeyASCII
     -- other-extensions:
     build-depends:    base ^>=4.18.2.1
                   ,   mtl >= 2.3.1
